# Fractalize

./: CMakeLists.txt  readme.md
res/shaders/: basic.shader  fractal.shader  fractal_smooth.shader
src/: BufferLayout.cpp  BufferLayout.h  FractalSettings.cpp  FractalSettings.h  GL_Handler.cpp  GL_Handler.h  IndexBuffer.cpp  IndexBuffer.h  InputHandler.cpp  InputHandler.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  main.cpp
